--- a/app/assets/styles/_map.scss
+++ b/app/assets/styles/_map.scss
@@ -7,4 +7,7 @@
 .static-map {
   width: 100%;
   height: 600px;
+  @include small {
+    height: 320px;
+  }
 }
